--- a/src/app/admin/app-list/app-list.component.scss
+++ b/src/app/admin/app-list/app-list.component.scss
@@ -174,12 +174,12 @@
 
 // }
 
-// .name-wrapper {
-//   .dsi-danger-circle {
-//     top: 8px;
-//     right: 5px;
-//   }
-// }
+.name-wrapper {
+  .dsi-danger-circle {
+    top: 8px;
+    right: 5px;
+  }
+}
 
 // .profileImage {
 //   width: 48px;
@@ -193,29 +193,29 @@
 // }
 
 
-// .new-app-window {
-//   height: 100vh;
-//   width: 360px;
-//   top: 0;
-//   right: -360px;
-//   z-index: 2;
-//   transition: 0.2s;
-//   overflow: auto;
-//   padding-top: 40px !important;
+.new-app-window {
+  height: 100vh;
+  width: 360px;
+  top: 0;
+  right: -360px;
+  z-index: 2;
+  transition: 0.2s;
+  overflow: auto;
+  padding-top: 40px !important;
 
-//   &.show {
-//     right: 0px !important;
-//   }
+  &.show {
+    right: 0px !important;
+  }
 
-//   &.overlay {
-//     height: 100vh;
-//     width: 100vw;
-//     top: 0;
-//     left: 0;
-//     z-index: 1;
-//     background: rgba($color: #000000, $alpha: 0.6);
-//   }
-// }
+  &.overlay {
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba($color: #000000, $alpha: 0.6);
+  }
+}
 
 
   .card-container {
