--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -245,7 +245,7 @@
     <div class="form-group">
       <label class="font-13 text-secondary" for="category">Tables</label>
       <select id="data" class="form-control" (change)="selectTables($event)">
-        <option [value]="table" *ngFor="let table of tables">{{table}}</option>
+        <option [value]="table.name" *ngFor="let table of tables">{{table.name}}</option>
       </select>
     </div>
     <div class="form-group" *ngIf="!form.get('schemaFree').value">
