--- a/src/app/home/b2b-flows-manage/node-properties/service-selector/service-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/service-selector/service-selector.component.html
@@ -23,7 +23,8 @@
         </div>
         <div *ngIf="!serviceList || serviceList.length == 0"
             class="list-group-item d-flex align-items-center justify-content-between text-secondary">
-            No Data Service found for the term: <span class="fw-500 text-dark">{{searchTerm}}</span>
+            {{searchTerm && serviceList ? 'No Data Service found for the term:' : 'No data service found'}} <span
+                class="fw-500 text-dark">{{searchTerm}}</span>
         </div>
     </div>
     <div class="d-flex align-items-center justify-content-end">
