Defect DEF2426 fixed

--- a/src/app/home/b2b-flows-manage/node-properties/service-selector/service-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/service-selector/service-selector.component.html
@@ -17,7 +17,7 @@
             <div class="d-flex align-items-center">
                 <odp-round-radio [edit]="edit" [checked]="item._selected">
                 </odp-round-radio>
-                <span class="ml-3">{{item.name}}</span>
+                <span [ngbTooltip]="item.name" class="ml-3 text-truncate" style="max-width: 200px;">{{item.name}}</span>
             </div>
             <span>{{item.attributeCount}}</span>
         </div>
