--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.scss
@@ -12,6 +12,10 @@
         right: 0px;
     }
 }
+.node-mapping-window{
+    right: -90vw;
+    width: 90vw;
+}
 
 .node-agent-window {
     width: 360px;
