--- a/src/app/home/schema-utils/state-model/state-model.component.html
+++ b/src/app/home/schema-utils/state-model/state-model.component.html
@@ -1,6 +1,13 @@
 <div class='p-4'>
 
-    <div class="fw-600 font-20 mb-3">State Model</div>
+    <div class="d-flex">
+        <div class="fw-600 font-20 mb-3">State Model</div>
+        <div class="ml-2" *ngIf="edit.status">
+            <odp-switch [edit]="{ status: true }" type="dark" (checkedChange)="toggleStateModelStatus()"
+                [(checked)]="stateModelStatus">
+            </odp-switch>
+        </div>
+    </div>
 
     <ng-container *ngIf="!isSchemaFree">
         <p class='text-secondary mb-4 state-model-desc'>
@@ -18,8 +25,8 @@
                         [inputFormatter]="inputFormatter" (selectItem)="selectAttribute($event.item)"
                         placeholder="Choose existing attribute or create one..." #instance="ngbTypeahead" />
                 </div>
-                <button [disabled]="!edit.status" id="configureStateModel" class="btn btn-link"
-                    (click)="enableStateModel()">
+                <button [disabled]="!edit.status || !stateModelStatus" id="configureStateModel" class="btn btn-link"
+                    (click)="enableStateModel(); stateModelStatus = true">
                     Configure State Model
                 </button>
             </div>
@@ -48,7 +55,7 @@
                     <input [attr.disabled]="true" type="text" class="form-control" [value]="StateModelAttrName">
                 </div>
                 <div *ngIf="edit.status" class="mt-2">
-                    <span (click)="disableStateModel()" class="btn btn-link">
+                    <span (click)="deleteStateModel()" class="btn btn-link">
                         Delete State Model
                     </span>
                 </div>
